[tool.poetry]
name = "gucci"
version = "0.1.0"
description = "Gas Use: Calculator for Climate Impact (GUCCI)"
authors = ["Scott Olesen <swo@alum.mit.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
